--- a/.emacs.d/org.org
+++ b/.emacs.d/org.org
@@ -27,7 +27,9 @@ This installs the org package and creates a setup function to enable/disable cer
 
         ; Org agenda timestamp formatting
         org-display-custom-times t
-        org-time-stamp-custom-formats '("%m-%d-%y %a" . "%m-%d-%y %a %I:%M %p")))
+        org-time-stamp-custom-formats '("%m-%d-%y %a" . "%m-%d-%y %a %I:%M %p"))
+
+  (jm/leader-keys "oa" '(org-agenda :which-key "Org agenda")))
 #+end_src
 
 * Evil Org
@@ -216,7 +218,8 @@ Org-roam is a plain-text knowledge management system. It brings some of Roam's m
 
   (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
   (org-roam-db-autosync-mode)
-  (jm/org-roam-refresh-agenda-list))
+  (jm/org-roam-refresh-agenda-list)
+  (jm/leader-keys "ot" '(org-roam-dailies-goto-today :which-key "Open/create daily notes file")))
 
 #+end_src
 
