--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -399,8 +399,10 @@ The Emacs dashboard package provides a nice dashboard when first starting up ema
 #+begin_src emacs-lisp
 (use-package dashboard
   :config
-  (setq initial-buffer-choice
-        (lambda () (get-buffer-create "*dashboard*")))
+  (setq initial-buffer-choice (lambda () (get-buffer-create "*dashboard*"))
+        dashboard-items '((recents . 5)
+                          (projects . 5)
+                          (agenda . 5)))
   (dashboard-setup-startup-hook))
 #+end_src
 
