--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -398,11 +398,14 @@ The Emacs dashboard package provides a nice dashboard when first starting up ema
 
 #+begin_src emacs-lisp
 (use-package dashboard
-  :config
-  (setq initial-buffer-choice (lambda () (get-buffer-create "*dashboard*"))
-        dashboard-items '((recents . 5)
-                          (projects . 5)
+  :init
+  (setq dashboard-set-file-icons t
+        dashboard-set-heading-icons t
+        initial-buffer-choice (lambda () (get-buffer-create "*dashboard*"))
+        dashboard-items '((projects . 5)
+                          (recents . 5)
                           (agenda . 5)))
+  :config
   (dashboard-setup-startup-hook))
 #+end_src
 
