--- a/.emacs.d/org.org
+++ b/.emacs.d/org.org
@@ -13,16 +13,6 @@ This installs the org package and creates a setup function to enable/disable cer
   (visual-line-mode 1)
   (add-to-list 'org-link-frame-setup '(file . find-file))) ; Open link in current window not other window.
 
-
-;; Shortcut to goto todays org-roam dailies document.
-(defun jm/org-roam-goto-today ()
-  (interactive)
-  (let* ((path (format-time-string "%Y-%m-%d.org" ))
-         (full-path (file-name-concat org-roam-directory "daily" path)))
-    (if (file-exists-p full-path)
-        (find-file full-path)
-      (org-roam-dailies-capture-today))))
-
 (use-package org
   :hook (org-mode . jm/org-mode-setup)
   :config
@@ -40,8 +30,7 @@ This installs the org package and creates a setup function to enable/disable cer
         org-time-stamp-custom-formats '("%m-%d-%y %a" . "%m-%d-%y %a %I:%M %p"))
 
   (jm/leader-keys
-    "oa" '(org-agenda :which-key "Org agenda")
-    "ot" '(jm/org-roam-goto-today :which-key "Open/create daily notes file")))
+    "oa" '(org-agenda :which-key "Org agenda")))
 #+end_src
 
 * Evil Org
