--- a/.emacs.d/org.org
+++ b/.emacs.d/org.org
@@ -179,7 +179,7 @@ Org-roam is a plain-text knowledge management system. It brings some of Roam's m
 (use-package org-roam
   :demand t
   :custom
-  (org-roam-directory (file-truename "~/Dropbox"))
+  (org-roam-directory (file-truename "~/Dropbox/org"))
   :bind (("C-c n l" . org-roam-buffer-toggle)
          ("C-c n f" . org-roam-node-find)
          ("C-c n i" . org-roam-node-insert)
