--- a/.emacs.d/org.org
+++ b/.emacs.d/org.org
@@ -161,9 +161,17 @@ Adds custom states to tasks such as ~IN PROGRESS~, ~CANCELLED~, etc. I've also a
 #+begin_src emacs-lisp
 (setq org-todo-keyword-faces '(("IN PROGRESS" . (:foreground "orange" :weight bold))
                                ("WAITING" . (:foreground "yellow" :weight bold))))
-                               
 
-(setq org-todo-keywords '((sequence "TODO(t)" "IN PROGRESS(i)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
+(setq org-todo-keywords
+      '((sequence
+         "TODO(t)"
+         "IN PROGRESS(i)"
+         "WAITING(w)"
+         "|"
+         "DONE(d)"
+         "CANCELLED(c)")))
+
+(setq org-clock-in-switch-to-state "IN PROGRESS")
 #+end_src
 
 ** Refresh Checkboxes
